package message;

option java_package = "org.flexiblepower";
option java_outer_classname = "SessionProto";

message Session {
  enum ModeType {
    CREATE = 0;
    DELETE = 1;
  }
  required ModeType mode = 1;
  required string id = 2;
  optional string address = 3;
  optional int32 port = 4;
  optional string subscribeHash = 5;
  optional string publishHash = 6;
}